aanbod pagina exaam klaar

--- a/Exaam/it-topics-2-examen/aanbod.html
+++ b/Exaam/it-topics-2-examen/aanbod.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stijl/stijl.css">
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Aanbod</title>
@@ -75,48 +76,3 @@
 </body>
 
 </html>
-<style>
-    .content{
-        margin-left: 35px;
-        margin-right: 35px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    #it_employees{
-        width: 400px;
-        border-radius: 1rem;
-        box-shadow: 5px 5px 5px lightgray;
-        margin-right: 10px;
-        margin-bottom: 5px;
-    }
-    .uitleg{
-        margin: 50px;
-    }
-    .IT_Owledge{
-        color: #5599bb;
-    }
-    #aanbod{
-        clear: left;
-    }
-    th{
-        background-color: #343a40;
-        color: white;
-    }
-    tr:nth-child(odd){
-    background-color: lightgray;
-    }
-    table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    }
-    table{
-        box-shadow: 5px 5px 5px lightgray;
-        margin-bottom: 10px;
-    }
-    a:link{
-        color: #999999;
-    }
-    a:hover{
-        color: #5599bb;
-    }
-</style>
