aanbod pagina exaam klaar

--- a/Exaam/it-topics-2-examen/aanbod.html
+++ b/Exaam/it-topics-2-examen/aanbod.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="content">
         <p><strong>IT Owledge staat voor je klaar met een compleet aanbod trainingen en opleidingen</strong></p>
-        <p><img src="../it-topics-2-examen/afbeeldingen/it_employees.jpg" alt="it_employees" style="float:left" id="it_employees"></p>
+        <p><img src="../it-topics-2-examen/afbeeldingen/it_employees.jpg" alt="it_employees" style="float:left" class="it_fotos"></p>
         <div id="uitleg">
             Sta jij aan het begin van jouw carrière als IT specialist en wil je jouw kennis en vaardigheden op professionele wijze ontwikkelen?
             Dan kan je hier een praktijkgerichte training bij <span class="IT_Owledge">IT Owledge</span> voor volgen.
