--- a/Exaam/it-topics-2-examen/overons.html
+++ b/Exaam/it-topics-2-examen/overons.html
@@ -5,11 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stijl/stijl.css">
+    <!-- Bootstrap CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Over ons</title>
 </head>
 
 <body>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand"><img src="../it-topics-2-examen/afbeeldingen/it_owledge.png" alt="it_owledge">IT Owledge</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="aanbod.html" class="nav-item nav-link">Aanbod</a>
+                    <a href="inschrijven.html" class="nav-item nav-link">Inschrijven</a>
+                    <a href="overons.html" class="nav-item nav-link active">Over ons</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="content">
+        <strong>
+            Jou vooruit helpen met IT. Dat doet IT Owledge al meer dan 10 jaar.
+            Door effectieve training leer jij efficiënter en blijf je de conccurentie voor!
+        </strong>
+        <p><img src="../it-topics-2-examen/afbeeldingen/it_guy.jpg" alt="it_guy" style="float:left" id="it_fotos"></p>
+        <div id="uitleg">
+            Sta jij aan het begin van jouw carrière als IT specialist en wil je jouw kennis en vaardigheden op professionele wijze ontwikkelen?
+            Dan kan je hier een praktijkgerichte training bij <span class="IT_Owledge">IT Owledge</span> voor volgen.
+            Maar ook wanneer je al een ervaren IT specialist bent en op de hoogte wilt blijven van de laatste ontwikkelingen, staat <span class="IT_Owledge">IT Owledge</span> voor je klaar.
+            Wij bieden trainingen, opleidingen en certificeringen aan voor verschillende platformen, systemen en programmeertalen en dat op verschillende niveaus.
+        </div>
+    </div>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
