overons pagina exaam klaar

--- a/Exaam/it-topics-2-examen/overons.html
+++ b/Exaam/it-topics-2-examen/overons.html
@@ -28,17 +28,23 @@
         </div>
     </nav>
     <div class="content">
-        <strong>
+        <p><strong>
             Jou vooruit helpen met IT. Dat doet IT Owledge al meer dan 10 jaar.
             Door effectieve training leer jij efficiënter en blijf je de conccurentie voor!
-        </strong>
-        <p><img src="../it-topics-2-examen/afbeeldingen/it_guy.jpg" alt="it_guy" style="float:left" id="it_fotos"></p>
+        </strong></p>
+        <p><img src="../it-topics-2-examen/afbeeldingen/it_guy.jpg" alt="it_guy" style="float:left" class="it_fotos"></p>
         <div id="uitleg">
-            Sta jij aan het begin van jouw carrière als IT specialist en wil je jouw kennis en vaardigheden op professionele wijze ontwikkelen?
-            Dan kan je hier een praktijkgerichte training bij <span class="IT_Owledge">IT Owledge</span> voor volgen.
-            Maar ook wanneer je al een ervaren IT specialist bent en op de hoogte wilt blijven van de laatste ontwikkelingen, staat <span class="IT_Owledge">IT Owledge</span> voor je klaar.
-            Wij bieden trainingen, opleidingen en certificeringen aan voor verschillende platformen, systemen en programmeertalen en dat op verschillende niveaus.
+            We weten dat de kracht van IT pas echt benut wordt wanneer medewerkers er optimaal mee kunnen werken.
+            Dat vraagt om een continue ontwikkeling van competenties.
+            We hebben een enorme passie voor de ontwikkeling van de juiste IT-kennis en vaardigheden bij de juiste mensen.
+            <span class="IT_Owledge">IT Owledge</span> zorgt ervoor dat professionals vandaag beschikken over de competenties die nodig zijn voor de technologie van morgen.
         </div>
+        <h2>Waarom kiest u voor een opleiding via IT Owledge?</h2>
+        <ul>
+            <li>Sterk praktijkgerichte opleidingen</li>
+            <li>Studeer flexibel thuis wanneer het past voor jou</li>
+            <li>Begeleiding door professionals met veel werkervaring in de praktijk</li>
+        </ul>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
